<resources>
    <string name="app_name">Designer note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log Out</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_create_task">Create new project</string>
    <string name="menu_create_customer">Create new customer</string>
    <string name="inspiration">Inspiration</string>
    <string name="menu_contact_customer">Contact customer</string>
    <string name="test">Test</string>
    <string name="project_costs">PROJECT COSTS</string>
    <string name="debt_costs">PROJECT DEBT</string>
    <string name="menu_timer">Timer</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_create_account">Create account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="spinner_people">"Select Customer"</string>
    <string name="create_customer">"Create Customer"</string>
    <string name="saved_online">"  Stored online"</string>
    <string name="save_online">"Save online"</string>
    <string name="project_includes">"Project includes"</string>
    <string name="hours">"h"</string>
    <string name="total_hours">"  Total hours"</string>
    <string name="menu_gallery">"Image inspiration"</string>
    <string name="time_hint">"08.50"</string>
    <string name="euro_hint">"00.00"</string>
    <string name="amount_per_hour">"€/h"</string>
    <string name="amount_per_hour_text">"  Amount per hour"</string>
    <string name="amount_per_hour_hint">"00.00"</string>
    <string name="paid_project">"  Set paid project"</string>
    <string name="done_project">"  Set project done"</string>
    <string name="save_changes">" Save changes "</string>
    <string name="euros">" € "</string>
    <string name="eurosPerHour">" €/h "</string>
    <string name="server_client_id">"1052751154736-74b3gslj1po7svu0dvfjk9hoj24m8tuv.apps.googleusercontent.com"</string>
    <string name="searchFor">"Inspiration for?"</string>
    <string name="getInspiration">"Get inspiration"</string>
    <string name="find_image">"Image taken from:"</string>
    <string name="choose_project_name">"Choose project"</string>
    <string name="answer_no">"No"</string>
    <string name="answer_yes">"Yes"</string>
    <string name="set_amount_ph">"Set hourly wage(€/h)"</string>

</resources>
