<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_projects"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_create_task"
            android:icon="@drawable/ic_create_task"
            android:title="@string/menu_create_task" />
        <item
            android:id="@+id/nav_create_customer"
            android:icon="@drawable/ic_create_customer"
            android:title="@string/menu_create_customer" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="Extras">

        <menu>
            <item
                android:id="@+id/nav_contact_customer"
                android:icon="@drawable/ic_contact_mail"
                android:title="@string/menu_contact_customer" />
            <item
                android:id="@+id/nav_timer"
                android:icon="@drawable/ic_timer"
                android:title="@string/menu_timer" />
        </menu>
    </item>

</menu>
