<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ViewProjectActivity">

    <!--margins-->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_margin"
        app:layout_constraintGuide_percent=".04"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_margin"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>
    <!--top-->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_margin"
        app:layout_constraintGuide_percent=".03"
        android:orientation="horizontal"/>
    <!--bottom-->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_margin"
        app:layout_constraintGuide_percent=".97"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/third_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fourth_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seventh_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/eighth_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:foregroundGravity="center"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/projectNameTextView"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toTopOf="@+id/top_margin">

    </ImageButton>
    <TextView
        android:id="@+id/projectNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/top_margin">

    </TextView>

    <TextView
        android:id="@+id/customerNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/lightBlue"
        app:layout_constraintTop_toBottomOf="@+id/projectNameTextView"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/left_margin">

    </TextView>

    <TextView
        android:layout_width="0dp"
        android:id="@+id/projectIncludes"
        android:layout_height="wrap_content"
        android:text="@string/project_includes"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/second_guide">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:id="@+id/projectIncludesItems"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/lightBlue"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/projectIncludes">
    </TextView>

    <LinearLayout
        android:id="@+id/projectImageLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/third_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/projectIncludesItems">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/priceLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toTopOf="@+id/hoursLayout"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/fourth_guide">

        <ImageView
            android:id="@+id/imagePrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_euro"></ImageView>

        <TextView
            android:id="@+id/priceText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/total_project_price"
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/priceValueText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/lightBlue"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hoursLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toTopOf="@+id/storedOnlineLayout"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/priceLayout">

        <ImageView
            android:id="@+id/imageHours"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_total_time">

        </ImageView>

        <TextView
            android:id="@+id/hoursText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/total_hours">

        </TextView>

        <TextView
            android:id="@+id/hoursValueText"
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="@color/lightBlue"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/app_name">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/storedOnlineLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toTopOf="@+id/seventh_guide"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toBottomOf="@+id/hoursLayout">

        <ImageView
            android:id="@+id/imageStorageOnline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_storage_black_24dp">

        </ImageView>

        <TextView
            android:id="@+id/saveOnlineText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_weight="4"
            android:text="@string/saved_online">

        </TextView>
        <ImageView
            android:id="@+id/imageStorageState"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_close_black_24dp">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/isDoneLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/bottom_margin"
        app:layout_constraintEnd_toStartOf="@+id/isPaidLayout"
        app:layout_constraintStart_toStartOf="@+id/left_margin"
        app:layout_constraintTop_toTopOf="@+id/eighth_guide">


        <ImageView
            android:id="@+id/doneImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_doneicon"></ImageView>

        <ImageView
            android:id="@+id/doneValueImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_close_black_24dp"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/isPaidLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/bottom_margin"
        app:layout_constraintEnd_toStartOf="@+id/right_margin"
        app:layout_constraintStart_toEndOf="@+id/isDoneLayout"
        app:layout_constraintTop_toTopOf="@+id/eighth_guide"
       >


        <ImageView
            android:id="@+id/paidImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_paidlogo"></ImageView>

        <ImageView
            android:id="@+id/paidValueImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_close_black_24dp"></ImageView>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>